<resources>
    <string name="app_name">semadio</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="kannada">Kannada</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="tamil">Tamil</string>
    <string name="textview">TextView</string>
    <string name="for_video_embedding">For video embedding</string>
    <string name="likes_views">Likes Views</string>
    <string name="video">Video</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="welcome_uploader">Welcome Uploader!</string>
    <string name="total_views">Total Views:</string>
    <string name="number_of_videos">Number of Videos:</string>
    <string name="statistics">Statistics:</string>
    <string name="number_of_likes">Number of Likes:</string>
    <string name="number_of_views">Number of Views:</string>
    <string name="upload">Upload</string>
    <string name="begin_upload">Begin Upload</string>
    <string name="browse">Browse</string>
    <string name="file_name">File Name</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="dashboard1">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_mp">Most Popular</string>
    <string name="nav_ma">My Account</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Most Popular</item>
        <item>My Account</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="liked">Liked</string>
    <string name="menu">Menu</string>
    <string name="support">Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_contact_us">Map</string>
</resources>
