<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:title="@string/menu">
            <menu>
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/history"
            android:title="@string/history"
            android:icon="@drawable/ic_history_black_48dp"/>
        <item
            android:id="@+id/nav_ma"
            android:title="@string/nav_ma"
            android:icon="@drawable/ic_account_circle_black_48dp"/>
        <item
            android:id="@+id/liked"
            android:title="@string/liked"
            android:icon="@drawable/ic_thumb_up_black_48dp"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"/>
            </menu>
        </item>
    </group>
    <group>
        <item android:title="@string/support">
            <menu>
                <item
                    android:id="@+id/nav_about_us"
                    android:title="@string/nav_about_us"/>
                <item
                    android:id="@+id/privacy_policy"
                    android:title="@string/privacy_policy"/>
                <item
                    android:id="@+id/contact"
                    android:title="@string/contact_us"/>
            </menu>
        </item>
    </group>
</menu>