<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gautamdhariharan.semadio.uploaderDash">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:id="@+id/l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/dasht"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/dashboard"
                android:textColor="@color/text"
                android:textSize="70dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/welct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/welcome_user"
                android:textColor="@color/text"
                android:textSize="45dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/likes"
                android:text="@string/statistics"
                android:textColor="@color/text"
                android:textSize="45dp" />

            <TextView
                android:id="@+id/numt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/sample"
                android:text="@string/number_of_videos"
                android:textColor="@color/background"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/vit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/sample"
                android:text="@string/number_of_views"
                android:textColor="@color/background"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/nol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/sample"
                android:text="@string/number_of_likes"
                android:textColor="@color/background"
                android:textSize="30dp" />

            <Button
                android:id="@+id/uploadb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:text="@string/upload"
                android:textColor="@color/text" />

            <TextView
                android:id="@+id/vid1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/desc"
                android:text="VIDEO"
                android:textColor="@color/text" />

            <TextView
                android:id="@+id/vid2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/desc"
                android:text="VIDEO"
                android:textColor="@color/text" />

            <TextView
                android:id="@+id/vid3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/desc"
                android:text="VIDEO"
                android:textColor="@color/text" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
