<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gautamdhariharan.semadio.activity.video">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/video"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="199dp"
            android:textColor="@color/text"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="15dp"
            android:text="@string/for_video_embedding"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp" />


        <ScrollView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/likes"
                    android:textAlignment="center"
                    android:background="@color/likes"
                    android:textColor="@color/text"
                    android:textAllCaps="true"
                    android:textSize="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/likes_views" />

                <TextView
                    android:id="@+id/desc"
                    android:textColor="@color/text"
                    android:background="@color/desc"
                    android:textAllCaps="true"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Video Description" />

                <TextView
                    android:id="@+id/suggestion1"
                    android:textColor="@color/text"
                    android:textAllCaps="true"
                    android:background="@color/colorAccent"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="165dp"
                    android:text="Video" />

                <TextView
                    android:id="@+id/suggestion2"
                    android:textColor="@color/text"
                    android:textAllCaps="true"
                    android:background="@color/colorPrimary"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="217dp"
                    android:text="@string/video" />

                <TextView
                    android:id="@+id/suggestion3"
                    android:textColor="@color/text"
                    android:textAllCaps="true"
                    android:background="@color/colorAccent"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="165dp"
                    android:text="Video" />

                <TextView
                    android:id="@+id/suggestion4"
                    android:textColor="@color/text"
                    android:textAllCaps="true"
                    android:background="@color/colorPrimary"
                    android:textSize="15dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="217dp"
                    android:text="Video" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
